<resources>
    <string name="app_name">Thio Chat</string>
    <string name="thiochat">ThioChat</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="requests">Requests</string>
    <string name="sign_out">Sign Out</string>
    <string name="members">Members</string>
    <string name="admin">Admin</string>
    <string name="leave_group">Leave Group</string>
    <string name="search">Search</string>
</resources>