<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="12dp">

    <ImageView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/materialButtonToggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:singleSelection="true"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailaddress_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        app:boxBackgroundMode="outline"
        app:counterEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/emailaddress_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button"
        app:srcCompat="@drawable/google_icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>