<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/group_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Biller Set " />

    <TextView
        android:id="@+id/no_of_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_name"
        tools:text="200 Members " />

    <TextView
        android:id="@+id/members_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="7dp"
        android:text="@string/members"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/requests_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_of_members" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_members"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintBottom_toTopOf="@+id/leave_group_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requests_btn" />

    <Button
        android:id="@+id/leave_group_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/leave_group"
        android:textColor="@color/background_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/requests_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requests"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_of_members" />


</androidx.constraintlayout.widget.ConstraintLayout>